--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "mysql2": "^2.2.5",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
